well, i kinda changed the entire project and went from using our calendar to java fx calendar, rewired database setup, cleaned up code